syntax = 'proto3';


import "common.message.proto";
import "property.models.proto";

message QueryRelationshipTypeRequest {
    QueryBuilder query_builder = 1;
    optional string search = 2;
    optional bool include_voided = 4;
    optional RequestContext context = 5;
}

message QueryRelationshipTypeResponse {
    repeated RelationshipType data = 1;
    string metadata = 2; 
}

message CreateRelationshipTypeRequest {
    QueryBuilder query_builder = 1;
    string description = 2;
    string a_is_to_b = 3;
    string b_is_to_a = 4;
    optional RequestContext context = 5;
}
message UpdateRelationshipTypeRequest {
    QueryBuilder query_builder = 1;
    optional string description = 2;
    optional string a_is_to_b = 3;
    optional string b_is_to_a = 4;
    string id = 5;
    optional RequestContext context = 6;
}
message GetRelationshipTypeRequest {
    QueryBuilder query_builder = 1;
    string id = 2;
    optional RequestContext context = 3;
}
message GetRelationshipTypeResponse {
    RelationshipType data = 1;
    string metadata = 2; 
}
message DeleteRelationshipTypeRequest {
    QueryBuilder query_builder = 1;
    string id = 2;
    optional bool purge = 3;
    optional RequestContext context = 4;
}
